--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,7 @@
 }
 
 * {
-    cursor: url('/static/sb.cur'), auto;
+    cursor: url('/static/pl.cur'), auto;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
